<resources>
    <string name="app_name">伟特企业参展打印系统</string>
    <string name="action_about_name">关于</string>

    <string name="action_bar_scan_name">中文-东莞</string>
    <string name="action_bar_scan_name_en">英文-台北</string>
    <string name="action_bar_print_name">打印</string>
    <string name="action_bar_delete_name">删除</string>
    <string name="action_bar_clear_name">清空</string>

    <string name="scan_icon_name">&#xf021;</string>
    <string name="print_icon_name">&#xf02f;</string>
    <string name="delete_icon_name">&#xf00d;</string>
    <string name="clear_icon_name">&#xf1f8;</string>

    <string name="table_title_id_name">序号</string>
    <string name="table_title_product_code_name">品号</string>
    <string name="table_title_product_name_name">品名</string>
    <string name="table_title_specifications_name">规格</string>
    <string name="table_title_width_name">幅宽</string>

    <string name="charset">GBK</string>
    <string name="state_is_paper">有纸</string>
    <string name="state_no_paper">缺纸</string>
    <string name="setting_is_paper">持续有纸</string>
    <string name="setting_no_paper">缺纸</string>
    <string name="setting_check">检测到黑标</string>
    <string name="print_complete">打印完成</string>

    <string name="print_no_paper">打印机缺纸</string>
    <string name="print_failed">打印机失败</string>
    <string name="print_voltage_low">电池电压过低</string>
    <string name="print_voltage_high">电源电压过高</string>
    <string name="tips">提示</string>
    <string name="close">关闭</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="pos_init_success">初始化成功</string>
    <string name="pos_init_fail">初始化失败</string>
    <string name="table_scan_already">已扫描过</string>
    <string name="table_print_row">没有待打印的记录</string>
    <string name="table_delete_row">请先选中要删除的记录</string>
    <string name="scan_cancel">扫描取消</string>
    <string name="scan_success">扫描成功: </string>
    <string name="exit_message">再按一次退出</string>
    <string name="exit_alert_title">系统提示</string>
    <string name="exit_alert_message">确定要退出</string>
    <string name="exit_alert_confirm">确定</string>
    <string name="exit_alert_cancel">取消</string>

    <string name="clear_alert_title">系统提示</string>
    <string name="clear_alert_message">确定要清空全部记录</string>
    <string name="clear_alert_confirm">确定</string>
    <string name="clear_alert_cancel">取消</string>

    <string name="add_error_alert_title">系统提示</string>
    <string name="add_error_alert_message">记录错误，请重新输入</string>
    <string name="add_error_alert_confirm">确定</string>

    <string name="print_format_title">东莞伟德\n地址:东莞市常平镇袁山贝大道1号\n联系人:黄先生(Dick)\n电话:86-769-83916128\n-----------样本如下-----------</string>
    <string name="print_format_body_start">----------第</string>
    <string name="print_format_body_end">款----------</string>
    <string name="print_format_footer_start">------------共</string>
    <string name="print_format_footer_end">款------------</string>

    <string name="print_format_title_en">WEDTEX INUSTRIAL CORP.\nAddr:6F.,NO.88,Sec.1 Nei Hu Road,Taibei,Taiwan\nAttn:Mr. David Wang\nTel:886-2-26578456\n----------Sample List----------</string>
    <string name="print_format_body_start_en">----------NO.</string>
    <string name="print_format_body_end_en">----------</string>
    <string name="print_format_footer_start_en">------------Total:</string>
    <string name="print_format_footer_end_en">------------</string>


</resources>
