<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">

        <View
                android:layout_width="0.5dip"
                android:layout_height="fill_parent"
                android:background="#B4B3B3"/>

        <TextView
                android:id="@+id/table_title_id"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:textColor="#000000"
                android:textSize="15sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/table_title_id_name"/>

        <View
                android:layout_width="0.5dip"
                android:layout_height="fill_parent"
                android:background="#B4B3B3"/>

        <TextView
                android:id="@+id/table_title_product_code"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:textColor="#000000"
                android:textSize="15sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/table_title_product_code_name"/>

        <View
                android:layout_width="0.5dip"
                android:layout_height="fill_parent"
                android:background="#B4B3B3"/>

        <TextView
                android:id="@+id/table_title_product_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:textColor="#000000"
                android:textSize="15sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/table_title_product_name_name"/>

        <View
                android:layout_width="0.5dip"
                android:layout_height="fill_parent"
                android:background="#B4B3B3"/>

        <TextView
                android:id="@+id/table_title_specifications"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:textColor="#000000"
                android:textSize="15sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/table_title_specifications_name"/>

        <View
                android:layout_width="0.5dip"
                android:layout_height="fill_parent"
                android:background="#B4B3B3"/>

        <TextView
                android:id="@+id/table_title_width"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:textColor="#000000"
                android:textSize="15sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/table_title_width_name"/>

        <View
                android:layout_width="0.5dip"
                android:layout_height="fill_parent"
                android:background="#B4B3B3"/>

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:background="#B4B3B3"/>
    </LinearLayout>
</LinearLayout>